--- a/_posts/2015-04-14-linker.md
+++ b/_posts/2015-04-14-linker.md
@@ -64,17 +64,7 @@ foo() {
 
 因为elf记录了符号的大小.
 
-### 静态库
-
-链接时，当连接器遇到一个链接库，会在库里的所有文件中搜寻它要解决的符号，然后把不包含这些符号的文件舍弃掉(减少了最终目标文件的体积.)
-
-因此在排列传递给连接器的文件顺序时，要按照链接库被依赖的顺序，从右到左排列.
-
-比如 foo.c 依赖 liba.o , liba.o 依赖 libb.o, 则应该:
-
-  gcc -o out foo.c -la -lb
-
-### 动态链接的搜索路径
+### 动态链接的搜索路径 
 
 在编译期链接时，elf要在特定的路径里搜索共享库。 这些路径是`编译期的搜索路径`. 在命令行中可以通过`-L PATH`添加.
 
@@ -86,6 +76,70 @@ foo() {
   
 用命令 `ld --verbose | grep SEARCH_DIR` 可以查看ld的搜索路径
 
+
+### 与库的链接
+
+链接时，当连接器遇到一个链接库，会在库里的所有文件中搜寻它要解决的符号，然后把不包含这些符号的文件舍弃掉(减少了最终目标文件的体积.)
+
+因此在排列传递给连接器的文件顺序时，要按照链接库被依赖的顺序，从右到左排列.
+
+比如 foo.c 依赖 liba.o , liba.o 依赖 libb.o, 则应该:
+
+  gcc -o out foo.c -la -lb
+
+注意： 与库链接时并不解决多个强符号的问题。 比如 `foo.c`里依赖符号`foo`, 而`liba`与`libb`都提供该符号。 那么按照上面参数的顺序， `liba`中的符号将被绑定，而到了`libb`中， `foo`已经不再是需要解决的符号。
+
+举例：
+
+main.c:
+
+{% highlight c %}
+#include <stdio.h>
+
+int
+main() {
+    printf("%d\n", add(3, 4));
+    printf("multi: %d\n", multi(3, 4));
+}
+{% endhighlight %}
+
+add.c:
+
+{% highlight c %}
+int add(int a, int b) {
+    return a + b;
+}
+{% endhighlight %}
+
+addwrong.c:
+
+{% highlight c %}
+int add(int a, int b) {
+    return a * b;
+}
+
+int multi(int a, int b) {
+    return a * b;
+}
+{% endhighlight %}
+
+main.c 依赖`add`和`multi`两个符号，add.c提供了一个正确的`add`实现, addwrong.c提供了一个错误的`add`和一个正确的`multi`.
+
+执行:
+
+    $ gcc -shared -fpic addwrong.c -o libaddwrong.so
+    $ gcc -shared -fpic add.c -o libadd.so
+
+调整`libadd.so`和`libaddwrong.so`的参数顺序，会得到不同的答案。
+
+    $ gcc -Wl,-rpath . main.c libadd.so  libaddwrong.so ;./a.out
+    add: 7
+    multi: 12
+
+    $ gcc -Wl,-rpath . main.c libaddwrong.so libadd.so   ;./a.out
+    add: 12
+    multi: 12
+    
 ### 运行期动态链接
 
 *nix 上可以用 `dlopen`动态链接一个库。
@@ -158,6 +212,7 @@ main() {
     ./a
 
 得到
+
     >> vm:
     7f4ed558c000-7f4ed558d000 r-xp 00000000 08:01 5901060                    /home/hqwrong/code/c/libadd1.so
     7f4ed558d000-7f4ed578c000 ---p 00001000 08:01 5901060                    /home/hqwrong/code/c/libadd1.so
@@ -168,9 +223,9 @@ main() {
 
 ### Position Independent Code(PIC)
 
-pic代码, 即可以加载到任何地址而不需要重定位就可以运行的代码。它在.data节生成一个table保存该模块所有全局变量的绝对地址，该table被称为GOT(Global Offset Table).
+pic代码, 即可以加载到任何地址而不需要重定位就可以运行的代码。它在.data节生成一个table保存该模块所有全局函数的绝对地址，该table被称为GOT(Global Offset Table).
 
-索引全局变量的代码就变为间接索引GOT的一个条目, 这样加载该模块时只需重定位.data里的GOT,代码段可以保持不被更改;因此代码可以被多个程序共享. 所以在编译共享库时，-fPic是必须的。
+索引全局函数的代码就变为间接索引GOT的一个条目, 这样加载该模块时只需重定位.data里的GOT,代码段可以保持不被更改;因此代码可以被多个程序共享. 所以在编译共享库时，-fPic是必须的。
 
     $ gcc -shared add1.c
     /usr/bin/ld: /tmp/ccosMoHf.o: relocation R_X86_64_PC32 against symbol `myvar' can not be used when making a shared object; recompile with -fPIC
