--- a/_posts/2015-04-14-linker.md
+++ b/_posts/2015-04-14-linker.md
@@ -29,22 +29,22 @@ elf只记录全局变量的名字、大小、位置信息,存储区(section).
 
 用`read -s OBJFILE`查看objfile的符号信息.例如(main.c见后面)：
 
-> gcc -c main.c
-> readelf -s main.o
-> Symbol table '.symtab' contains 12 entries:
->   Num:    Value          Size Type    Bind   Vis      Ndx Name
->     0: 0000000000000000     0 NOTYPE  LOCAL  DEFAULT  UND 
->     1: 0000000000000000     0 FILE    LOCAL  DEFAULT  ABS main.c
->     2: 0000000000000000     0 SECTION LOCAL  DEFAULT    1 
->     3: 0000000000000000     0 SECTION LOCAL  DEFAULT    3 
->     4: 0000000000000000     0 SECTION LOCAL  DEFAULT    5 
->     5: 0000000000000000     0 SECTION LOCAL  DEFAULT    6 
->     6: 0000000000000000     0 SECTION LOCAL  DEFAULT    8 
->     7: 0000000000000000     0 SECTION LOCAL  DEFAULT    9 
->     8: 0000000000000000     0 SECTION LOCAL  DEFAULT    7 
->     9: 0000000000000000     8 OBJECT  GLOBAL DEFAULT    3 a
->    10: 0000000000000000    21 FUNC    GLOBAL DEFAULT    1 main
->    11: 0000000000000000     0 NOTYPE  GLOBAL DEFAULT  UND foo
+     gcc -c main.c
+     readelf -s main.o
+     Symbol table '.symtab' contains 12 entries:
+       Num:    Value          Size Type    Bind   Vis      Ndx Name
+         0: 0000000000000000     0 NOTYPE  LOCAL  DEFAULT  UND 
+         1: 0000000000000000     0 FILE    LOCAL  DEFAULT  ABS main.c
+         2: 0000000000000000     0 SECTION LOCAL  DEFAULT    1 
+         3: 0000000000000000     0 SECTION LOCAL  DEFAULT    3 
+         4: 0000000000000000     0 SECTION LOCAL  DEFAULT    5 
+         5: 0000000000000000     0 SECTION LOCAL  DEFAULT    6 
+         6: 0000000000000000     0 SECTION LOCAL  DEFAULT    8 
+         7: 0000000000000000     0 SECTION LOCAL  DEFAULT    9 
+         8: 0000000000000000     0 SECTION LOCAL  DEFAULT    7 
+         9: 0000000000000000     8 OBJECT  GLOBAL DEFAULT    3 a
+        10: 0000000000000000    21 FUNC    GLOBAL DEFAULT    1 main
+        11: 0000000000000000     0 NOTYPE  GLOBAL DEFAULT  UND foo
 
 `Ndx`表示section. 1表示.text， 3表示.data。同时还有几个特殊的值：
 - `ABS` 表示是绝对位置，不是相对section的位置，因此不能被重定位。
