_posts/2015-04-14-linker.md: m

--- a/_posts/2015-04-14-linker.md
+++ b/_posts/2015-04-14-linker.md
@@ -29,9 +29,9 @@ elf只记录全局变量的名字、大小、位置信息,存储区(section).
 
 用`read -s OBJFILE`查看objfile的符号信息.例如(main.c见后面)：
 
-     gcc -c main.c
-     readelf -s main.o
-     Symbol table '.symtab' contains 12 entries:
+     $ gcc -c main.c
+     $ readelf -s main.o
+       Symbol table '.symtab' contains 12 entries:
        Num:    Value          Size Type    Bind   Vis      Ndx Name
          0: 0000000000000000     0 NOTYPE  LOCAL  DEFAULT  UND 
          1: 0000000000000000     0 FILE    LOCAL  DEFAULT  ABS main.c
