--- a/_posts/2015-04-14-linker.md
+++ b/_posts/2015-04-14-linker.md
@@ -18,8 +18,44 @@ tags: code
 
 - 用extern显式表明该变量为外部变量: `extern int base;`
 
-在生成elf后，被`extern`修饰的变量对应 `UNDEF` symobl, 为初始化的变量对应`COMMON` symbol.
+在生成elf后，被`extern`修饰的变量对应 `UNDEF` symobl, 而初始化的变量对应`COMMON` symbol.
 
+### Elf
+分三种类型: 可重定向的(relocatable),可执行的(executable)，动态库(shared). 
+
+内容大致分为以下几个区：
+
+0. header 存储该obj file的类型(relocatable, executable or shared),目标机器类型等
+
+1. .text  代码段
+
+2. .rodata Read-only data，只读数据段(比如常量string, const static 等)
+
+3. .data   已初始化的数据段
+
+4. .bss    未初始化的数据段。因为默认初始化为0指，所以这个区为空，只在运行期时赋值.
+
+5. .symtab  符号表，每个条目记录该符号的 段类型，大小，符号类型，名字(名字字符串存储在strtab段里，这里实际只记录在strtab段的offset)。如下所示:
+
+6. .rel.text  代码段里需要重定向的条目. 可执行文件此行为空.
+
+7. .rel.data  数据段里需要重定向的条目. 可执行文件此行为空
+
+8. .debug     debug信息
+
+9. .line     代码行号与机器码的对应，debug信息。
+
+10. .strtab   存储常量字符串。 如.symtab里符号名字，.debug里的字符串，header里的字符串等。
+
+11. .dynamic  存储动态链接信息，如需要动态链接的库的名字。只有需要动态链接的文件才有此段. 例如:
+
+    $ readelf -d /bin/bash
+    Dynamic section at offset 0xc1ef0 contains 29 entries:
+      标记        类型                         名称/值
+     0x00000001 (NEEDED)                     共享库：[libtinfo.so.5]
+     0x00000001 (NEEDED)                     共享库：[libdl.so.2]
+     0x00000001 (NEEDED)                     共享库：[libgcc_s.so.1])))    
+ 
 ### Elf上的符号信息
 
 Elf是*nix上可执行文件的标准格式。
@@ -95,7 +131,7 @@ foo() {
 
 通过 -Wl,-rpath 增加的路径会记在elf文件的.dynamic节里的RPATH字段.
 
-> objdump -x OBJFILE | grep RPATH
+    objdump -x OBJFILE | grep RPATH
   
 用命令 `ld --verbose | grep SEARCH_DIR` 可以查看ld的默认搜索路径
 
@@ -246,7 +282,7 @@ main() {
 
 ### Position Independent Code(PIC)
 
-pic代码, 即可以加载到任何地址而不需要重定位就可以运行的代码。它在.data节生成一个table保存该模块所有全局函数的绝对地址，该table被称为GOT(Global Offset Table).
+pic代码, 即可以加载到任何地址而不需要重定位就可以运行的代码。它在.data段生成一个table保存该模块所有全局函数的绝对地址，该table被称为GOT(Global Offset Table).
 
 索引全局函数的代码就变为间接索引GOT的一个条目, 这样加载该模块时只需重定位.data里的GOT,代码段可以保持不被更改;因此代码可以被多个程序共享. 所以在编译共享库时，-fPic是必须的。
 
