--- a/_posts/2016-10-05-mmap.md
+++ b/_posts/2016-10-05-mmap.md
@@ -4,11 +4,11 @@ title: mmap与虚拟内存(vm)
 tags: code
 ---
 
-** 虚拟内存
+## 虚拟内存
 
 虚拟内存是为*每个进程*抽象出来的一层内存空间，与物理内存地址存在映射关系。
 
-这层映射关系，是以页(page)为单位进行的。 页大小一般是4kb, ＊nix上可以通过`sysconf PAGESIZE` 查看。
+这层映射关系，是以页(page)为单位进行的。 页大小一般是4kb, *nix上可以通过`sysconf PAGESIZE` 查看。
 
 `mmap`提供了一种直接在虚拟内存与物理磁盘之间建立映射关系的方式。它的运作原理是，当要访问该页的内容，而对应磁盘页(Virtual Page)的数据尚未加载到物理内存时，内核会产生`页缺失(page faiure)`的事件，该事件触发page failure handler去将磁盘页的数据加载到物理内存中。
 
@@ -23,7 +23,7 @@ tags: code
 3. Uncached. 该页已建立映射关系，但数据还未缓存到物理内存中(还在磁盘上). 此时PTE里的地址为磁盘页地址。
 
 
-** mmap
+## mmap
 
 
 {% highlight c %}
@@ -59,7 +59,7 @@ main(int argc, char *argv[]) {
     printf("Usage %s FILENAME", argv[0]);
     return 1;
   }
-  if ((f = open(argv[1], O_RDWR)) < 0) {
+  if ((f = open(argv[1], O_RDONLY)) < 0) {
     perror("open failed.");
     return 1;
   }
@@ -83,4 +83,4 @@ main(int argc, char *argv[]) {
 
 产生了一次 Major page fault(即页缺失)。
 
-注意：要求tmmap跟不常用的文件测试(即没被主程序缓存)， 上面的实验在做一次，会显示major page fault为0， 因为刚刚的测试已经把/usr/bin/sort缓存到内存里了.(同理，用dd现场创建一个文件也不行)
+注意：要用不常用的文件测试(即没被内存缓存的文件)。上面的实验若再做一次，会显示major page fault为0， 因为刚刚的测试已经把/usr/bin/sort缓存到内存里了.(同理，用dd现场创建一个文件也不行)
