--- a/_posts/2017-09-07-iptables.md
+++ b/_posts/2017-09-07-iptables.md
@@ -1,11 +1,18 @@
+---
+layout: post
+title: iptables备忘
+tags: code
+---
+
 iptable依赖linux底层的netfilter
 
-netfilter支持五种钩子。
-NF_IP_PRE_ROUTING:   当有流量刚进入网络栈时(还未路由)，该钩子被触发.
-NF_IP_LOCAL_IN: 当网络包已被路由并且目的地是本地时，该钩子被触发.
-NF_IP_FORWARD: 当网络包已被路由并且目的地是其他主机时，该钩子被触发. 
-NF_IP_LOCAL_OUT: 当本地产生的网络包进入网络栈时，该钩子被触发.
-NF_IP_POST_ROUTING: 当网络包(本地产生的或者转发的)刚被路由后，该钩子被触发.
+netfilter支持五种钩子,对应iptables的内置五个链.
+
+NF_IP_PRE_ROUTING(PREROUTING):   当有流量刚进入网络栈时(还未路由)，该钩子被触发.
+NF_IP_LOCAL_IN(INPUT): 当网络包已被路由并且目的地是本地时，该钩子被触发.
+NF_IP_FORWARD(FORWARD): 当网络包已被路由并且目的地是其他主机时，该钩子被触发. 
+NF_IP_LOCAL_OUT(OUTPUT): 当本地产生的网络包进入网络栈时，该钩子被触发.
+NF_IP_POST_ROUTING(POSTROUTING): 当网络包(本地产生的或者转发的)刚被路由后，该钩子被触发.
 
 iptables 用表来管理规则。一张表对应一种决策类型. 在表的内部若干规则组成不同的链，链通常决定了规则的触发时机。
 比如在nat这个表里的POSTROUTING链中的规则，它将对刚被路由后的网络包做出一些跟nat相关的决策.
@@ -13,8 +20,39 @@ iptables 用表来管理规则。一张表对应一种决策类型. 在表的内
 iptables有内置的五种链，他们对应netfilter的五种钩子.
 iptables有五种表.
 
-RAW表 
+- Filter表
+
+默认表。决策丢弃还是留下网络包. 适用于:INPUT,FORWARD,OUTPUT
+
+比如拒绝转发来自网段10.0.0.0/24的包:
+
+    iptables -A FORWARD -s 10.0.0.0/24 -j DROP
+
+- Nat表
+
+用于对网络包的nat转换.适用于: INPUT,POSTROUTING
+
+一个连接只有第一个包才会应用于nat规则，之后所有的包只是延用对第一个包做出的决策而已。并且对该连接的回复包，iptables会聪明的反向运用之前的nat规则。
+
+比如从网段10.0.0.0/8发出的包都从vnet0网络设备出(MASQUERADE表示从vnet0设备里自动找一个可用的网络地址作为该包的源地址)
+
+    iptables -t nat -A POSTROUTING -s 10.0.0.0/8 -o vnet0 -j MASQUERADE
 
 
-｜表/链|PREROUTING|INPUT|FORWARD|OUTPUT|POSTROUTING| 
-｜ raw | 
+- RAW表 
+
+主要用来给网络包打上标记. 支持链表: PREROUTING, OUTPUT
+
+比如跟踪本地发出的icmp包：
+
+    iptable -t raw -A OUTPUT -p icmp -j TRACE
+
+kernel将以TRACE:为前缀将log输出到kern.log
+
+- MANGLE表
+
+修改ip头。 适用于所有链.
+
+比如增加ttl：
+ iptables -t mangle -A PREROUTING -m ttl --ttl-gt 1 -j TTL --ttl-inc 4
+
