--- a/_posts/2017-09-07-iptables.md
+++ b/_posts/2017-09-07-iptables.md
@@ -8,11 +8,11 @@ iptable依赖linux底层的netfilter
 
 netfilter支持五种钩子,对应iptables的内置五个链.
 
-NF_IP_PRE_ROUTING(PREROUTING):   当有流量刚进入网络栈时(还未路由)，该钩子被触发.
-NF_IP_LOCAL_IN(INPUT): 当网络包已被路由并且目的地是本地时，该钩子被触发.
-NF_IP_FORWARD(FORWARD): 当网络包已被路由并且目的地是其他主机时，该钩子被触发. 
-NF_IP_LOCAL_OUT(OUTPUT): 当本地产生的网络包进入网络栈时，该钩子被触发.
-NF_IP_POST_ROUTING(POSTROUTING): 当网络包(本地产生的或者转发的)刚被路由后，该钩子被触发.
+1. NF_IP_PRE_ROUTING(PREROUTING):   当有流量刚进入网络栈时(还未路由)，该钩子被触发.
+2. NF_IP_LOCAL_IN(INPUT): 当网络包已被路由并且目的地是本地时，该钩子被触发.
+3. NF_IP_FORWARD(FORWARD): 当网络包已被路由并且目的地是其他主机时，该钩子被触发. 
+4. NF_IP_LOCAL_OUT(OUTPUT): 当本地产生的网络包进入网络栈时，该钩子被触发.
+5. NF_IP_POST_ROUTING(POSTROUTING): 当网络包(本地产生的或者转发的)刚被路由后，该钩子被触发.
 
 iptables 用表来管理规则。一张表对应一种决策类型. 在表的内部若干规则组成不同的链，链通常决定了规则的触发时机。
 比如在nat这个表里的POSTROUTING链中的规则，它将对刚被路由后的网络包做出一些跟nat相关的决策.
