--- a/_posts/2017-09-07-iptables.md
+++ b/_posts/2017-09-07-iptables.md
@@ -9,9 +9,13 @@ iptable依赖linux底层的netfilter
 netfilter支持五种钩子,对应iptables的内置五个链.
 
 1. NF_IP_PRE_ROUTING(PREROUTING):   当有流量刚进入网络栈时(还未路由)，该钩子被触发.
+
 2. NF_IP_LOCAL_IN(INPUT): 当网络包已被路由并且目的地是本地时，该钩子被触发.
+
 3. NF_IP_FORWARD(FORWARD): 当网络包已被路由并且目的地是其他主机时，该钩子被触发. 
+
 4. NF_IP_LOCAL_OUT(OUTPUT): 当本地产生的网络包进入网络栈时，该钩子被触发.
+
 5. NF_IP_POST_ROUTING(POSTROUTING): 当网络包(本地产生的或者转发的)刚被路由后，该钩子被触发.
 
 iptables 用表来管理规则。一张表对应一种决策类型. 在表的内部若干规则组成不同的链，链通常决定了规则的触发时机。
@@ -20,7 +24,7 @@ iptables 用表来管理规则。一张表对应一种决策类型. 在表的内
 iptables有内置的五种链，他们对应netfilter的五种钩子.
 iptables有五种表.
 
-- Filter表
+## Filter表
 
 默认表。决策丢弃还是留下网络包. 适用于:INPUT,FORWARD,OUTPUT
 
@@ -28,7 +32,7 @@ iptables有五种表.
 
     iptables -A FORWARD -s 10.0.0.0/24 -j DROP
 
-- Nat表
+## Nat表
 
 用于对网络包的nat转换.适用于: INPUT,POSTROUTING
 
@@ -39,7 +43,7 @@ iptables有五种表.
     iptables -t nat -A POSTROUTING -s 10.0.0.0/8 -o vnet0 -j MASQUERADE
 
 
-- RAW表 
+## RAW表 
 
 主要用来给网络包打上标记. 支持链表: PREROUTING, OUTPUT
 
@@ -49,7 +53,7 @@ iptables有五种表.
 
 kernel将以TRACE:为前缀将log输出到kern.log
 
-- MANGLE表
+## MANGLE表
 
 修改ip头。 适用于所有链.
 
