--- a/_posts/2017-09-07-iptables.md
+++ b/_posts/2017-09-07-iptables.md
@@ -4,9 +4,9 @@ title: iptables备忘
 tags: code
 ---
 
-iptable依赖linux底层的netfilter
+iptables 用表来管理规则。一张表对应一种决策类型. 在表的内部若干规则组成不同的链，链通常决定了规则的触发时机。
 
-netfilter支持五种钩子,对应iptables的内置五个链.
+iptable内置5个链，对应于linux底层的netfilter的五个钩子.
 
 1. NF_IP_PRE_ROUTING(PREROUTING):   当有流量刚进入网络栈时(还未路由)，该钩子被触发.
 
@@ -18,11 +18,8 @@ netfilter支持五种钩子,对应iptables的内置五个链.
 
 5. NF_IP_POST_ROUTING(POSTROUTING): 当网络包(本地产生的或者转发的)刚被路由后，该钩子被触发.
 
-iptables 用表来管理规则。一张表对应一种决策类型. 在表的内部若干规则组成不同的链，链通常决定了规则的触发时机。
 比如在nat这个表里的POSTROUTING链中的规则，它将对刚被路由后的网络包做出一些跟nat相关的决策.
 
-iptables有内置的五种链，他们对应netfilter的五种钩子.
-iptables有五种表.
 
 ## Filter表
 
