--- a/_posts/2017-09-04-ipsec.md
+++ b/_posts/2017-09-04-ipsec.md
@@ -70,9 +70,11 @@ ikev1 + xauth
     conn XAUTH-PSK
         keyexchange=ikev1
         aggressive=yes   # 用IKEv1的aggressive mode
-        leftauth=psk
+
+        leftauth=psk     # 这里也可以用 authby=xauthpsk ; xauth=server 替代
         rightauth=psk
         rightauth2=xauth
+
         left=%defaultroute
         leftsubnet=0.0.0.0/0  # ip的目标地址为任意地址
         leftfirewall=yes
@@ -81,6 +83,7 @@ ikev1 + xauth
         rightsourceip=192.168.201.1/24
         rightdns=8.8.8.8
         auto=add
+
 
 ### 配置strongswan.conf
 
@@ -91,8 +94,26 @@ ikev1 + xauth
         dns1 = 8.8.8.8
         dns2 = 8.8.4.4
 
+### 在ipsec.secrets里配置xauth 和 psk
+
+: PSK "ThisIsYourPSK"
+
+UserName1 : XAUTH "PASSWD1"
+UserName2 : XAUTH "PASSWD2"
+
+
+
 ### 配置iptables转发
 
 把网络包通过nat的方式从外网出口出去，这里的外网出口为eth1
 
     iptables -t nat -A POSTROUTING -s 192.168.0.0/24 -o eth1 -j MASQUERADE
+
+
+### 启动ipsec
+
+    ipsec start
+
+    或者
+
+    ipsec start --nofork
