--- a/_posts/2015-05-08-subway.md
+++ b/_posts/2015-05-08-subway.md
@@ -1,7 +1,13 @@
 ---
 layout: post
 title: 地铁三号线
-tags: story
+tag: story
+desc: |
+  其实挺偷懒的一段文字.
+
+  但一个朋友说她挤地铁时想起来会笑。 
+
+  就留下来了.
 ---
 
 你有没有搭过地铁三号线？ 在广州七八点的时候？
