--- a/_posts/2015-08-27-yue.md
+++ b/_posts/2015-08-27-yue.md
@@ -1,7 +1,9 @@
 ---
 layout: post
 title: 一起看电影
-tags: code
+tag: project
+desc: | 
+  没维护了，应该用不了了.
 ---
 
 做了个小东西，**帮助大家在各自的电脑上一起看电影，它会同步命令流，包括暂停，播放，拖动进度条等等。**
