--- a/_posts/2015-08-27-yue.md
+++ b/_posts/2015-08-27-yue.md
@@ -14,7 +14,7 @@ desc: |
 
    请下载安装好。
 
-2. 下载这个[补丁](/downloads/vlc.zip)， 本人纯手工打造，天然无害, 口感纯正，请放心使用。
+2. 下载这个[补丁](/assets/downloads/vlc.zip)， 本人纯手工打造，天然无害, 口感纯正，请放心使用。
 
    把解压后的文件覆盖到vlc的安装目录下的 lua/http 目录
 
@@ -27,7 +27,7 @@ desc: |
         /Applications/VLC.app/Contents/MacOS/share/lua/http
 
    覆盖前注意一下，如果你找对了的话，这个目录大概有这么些文件：
-   ![](/images/yue_0.png)
+   ![](/assets/images/yue_0.png)
 
     
 3. 对于vlc这种有纯正欧罗巴血统的贵族播放器，我们需要做一些配置，才能让它在中国的土壤上茁壮成长。 以下展示在windows下的配置步骤，用mac的装逼犯请自行揣摩。
@@ -35,19 +35,19 @@ desc: |
    - 打开vlc，点选 [工具]->[偏好配置].
 
    - 在左下角[显示设置]一栏，选择全部。
-   ![](/images/yue_1.png)
+   ![](/assets/images/yue_1.png)
 
    - 选择 [界面]->[主界面]， 框选[web]
 
-    ![](/images/yue_2.png)
+    ![](/assets/images/yue_2.png)
 
    - 选择 [界面]->[主界面]->[Lua],在密码一栏随便设置一个密码
 
-   ![](/images/yue_3.png)
+   ![](/assets/images/yue_3.png)
 
    - 选择 [视频]->[字幕/osd]->[文本渲染器] , 把字体选为 DFKai-SB(你要问我这个字体是什么鬼，我也不知道，反正用它你的中文字幕就不会出现乱码了)
 
-    ![](/images/yue_4.png)
+    ![](/assets/images/yue_4.png)
 
 5. 重启vlc
 
@@ -63,11 +63,11 @@ desc: |
 
 3. 网页会出现一个控制界面，如下图。 用这个界面去控制vlc的电影播放(试试左右套弄进度条，播放器应该会有反应)。
 
-    ![](/images/yue_5.png)
+    ![](/assets/images/yue_5.png)
 
 4. 一个小伙伴点[创建房间]，成功响应后，会显示你的房间号.
   
-    ![](/images/yue_6.png)
+    ![](/assets/images/yue_6.png)
 
 5.  把你的房间号告诉你的小伙伴，其余小伙伴点[进入房间],并输入该房间号。
 
