--- a/_posts/2016-07-25-kademlia.md
+++ b/_posts/2016-07-25-kademlia.md
@@ -41,7 +41,7 @@ Kademlia网络的拓扑结构是一个二叉树结构，每个节点是树的叶
 
 通过这样的路由划分，就实现了离自己越近的节点自己知道的越清楚。
 
-![节点0011...的路由信息](/images/kademlia_0.png)
+![节点0011...的路由信息](/assets/images/kademlia_0.png)
 
 
 ## 节点查找
@@ -64,7 +64,7 @@ k-bucket内的节点只在bucket满了并且有新节点更新的时候删除，
 
 ### 路由表的动态分裂
 
-![relax rules](/images/kademlia_1.png)
+![relax rules](/assets/images/kademlia_1.png)
 
 (待补充)
 结合relax rules, 可以应对unbalanced binary tree 的极端情况
