--- a/_posts/2017-09-04-ipsec.md
+++ b/_posts/2017-09-04-ipsec.md
@@ -24,7 +24,7 @@ strongswan 通过ipsec.conf来配置跟ipsec相关的参数，strongswan.conf配
 
 在ipsec.conf里一个conn表示一个initiator和responder建立起的连接。conn可以通过also＝来继承已有conn的配置。 
 
-当一个连接发起时，strongswan首先是通过多个因素(IP address(left|right),IKE版本,认证方式,leftid等)来匹配conn.
+当一个连接发起时，strongswan首先是通过多个因素(IP address(left/right),IKE版本,认证方式,leftid等)来匹配conn.
 
 一般用left代表这一边，right代表对方。
 
