--- a/_posts/2016-07-25-kademlia.md
+++ b/_posts/2016-07-25-kademlia.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: Kademlia初探
-tags: code
+title: Kademlia笔记
+tag: code
 ---
 
 Kademlia 是为p2p网络设计的分布式hash表算法。bt的DHT，emule的kad网络等都是基于它实现的去中心化资源节点搜索。
