--- a/_posts/2015-04-14-linker.md
+++ b/_posts/2015-04-14-linker.md
@@ -198,6 +198,8 @@ main.c 依赖`add`和`multi`两个符号，add.c提供了一个正确的`add`实
     $ gcc -Wl,-rpath . main.c libaddwrong.so libadd.so   ;./a.out
     add: 12
     multi: 12
+
+用 `ldd <Share Lib>` 可以查看该so文件链接了什么库.
     
 ### 运行期动态链接
 
