--- a/_posts/2018-05-04-laihama.md
+++ b/_posts/2018-05-04-laihama.md
@@ -3,7 +3,6 @@ layout: post
 tag: draft
 title: 推销一只癞蛤蟆
 ---
-
 那个人从大路远处走过来，是这个炎热的天气里放眼望去唯一还在移动的东西。他看上去跟我一样瘦，迈着很小的步子，踉跄，像走几步就有人突然推他一下。最后被狠狠地推了一把，他慌忙跨出两大步，在院门口站定了。
 
 他穿一件白衬衫，扣子扣到最高一颗，胸前有一大片的污迹。他拘谨地站在那里，舌头一遍遍地卷着嘴唇。
@@ -20,26 +19,26 @@ title: 推销一只癞蛤蟆
 
 我妻子在屋里对我说，他爱待着就待着吧，他总会走的。
 
-但第二天他没走，第三天也没有。除了喝水，我没见他吃过其他什么东西。白天他坐在水缸边昏昏欲睡，只有我们走过的时候才稍打起精神来；但抬手的力气似乎也没有了，只是气若游丝的在说，买吧买吧。吃饭的时候，他想进屋来，被我推了出去。我听见他在门外来回走动。我对外面喊，走吧，去别人家！他模糊地应了一声，就安静了。妻子把菜端上来，我盛好饭，妻子惊叫一声。餐桌旁的窗户上伸出了一颗脑袋。买吧，这个脑袋对着我们说。
+但第二天他没走，第三天也没有。除了喝水，我没见他吃过其他什么东西。白天他坐在水缸边昏昏欲睡，只有我们走过的时候才稍打起精神来；但抬手的力气似乎也没有了，只是气若游丝的在说，买吧买吧。吃饭的时候，他想进屋来，被我推了出去。我听见他在门外来回走动。我对外面喊，走吧，去别人家！他模糊地应了一声，就安静了。妻子把菜端上来，我盛好饭，妻子惊叫一声。餐桌旁的窗户上伸出来一颗脑袋。买吧，这个脑袋对着我们说。
 
 我冲出门。看到他半个身子已经伸到了墙里面。屋子里传来妻子的斥骂声。我跳起来踹他。他缩回来，嘴里塞得满满当当的；见到我，连忙低头弯腰，想护着手上的东西。我扬起手来要打他，他抬起手来护头。盘子里的菜倒了出来，汤水灌进他脖子里。他懊悔地嗷嗷叫起来，又把盘子平端到胸前，另一只手盖着上面所剩无几的几片肉，蹿到院子中央去了。屋里传来妻子的笑声，我们哈哈大笑起来。他茫然地站在太阳底下，汗水和菜汤离开他的下巴，正一滴一滴地掉到地上。
 
 他一直待到了九月份。他捡了些干草和柴在屋檐的一角，不再躺院子里了。他每天从窗户外顺走一点我们吃剩的饭菜。他喝缸里的水，把头埋到缸子里去。水被他搅得昏黄，面上飘着油渍跟菜渣。我每天从远处的井里挑桶水回家，进屋时他就躺在他自制的窝里扬起下巴来跟我打招呼。不再见到那只癞蛤蟆了，好像大家都忘记了它的存在。
 
-那天在院子里我没见到他，却听到屋里传来妻子的几声尖叫。我跨进屋去，看到妻子正被他堵在墙角，地面散落着碗筷，两碗白生生的饭倒扣在地上。他一只手拽着妻子的衣服，情绪激动地挥舞着另一只手。我操起一个板凳砸过去。他叫出声来，板凳砸到他的腿上，硬生生地折断声音。妻子哽咽着说，"他硬要闯进来...",  我继续打他,  "...抢东西吃"。他抱着头跑出屋子，跑到院门外。我跟在他后面，用脚踹他。他向来时的方向跑，越跑越快，我捡起所有能捡起的东西砸向他。他拐进远处的山坳里，不见了。
+那天在院子里我没见到他，却听到屋里传来妻子的几声尖叫。我跨进屋去，看到妻子正被他堵在墙角，地面散落着碗筷，两碗白生生的饭倒扣在地上。他一只手拽着妻子的衣服，情绪激动地挥舞着另一只手。我操起一个板凳砸过去。他叫出声来，板凳砸到他的腿上，把声音折成了两段。妻子哽咽着说，"他硬要闯进来..."。  我继续打他。他抱着头跑出屋子，跑到院门外。我跟在他后面，用脚踹他。他向来时的方向跑，越跑越快，我捡起所有能捡起的东西砸向他。他拐进远处的山坳里，不见了。
 
 在冬天来临之前我再也没见到他。
 
-十一月，一个摇摇晃晃的身影又出现在了路的尽头。他比之前更瘦了，颧骨像衣架一样撑着，衣服破烂，像刚从坟墓里爬出来一般。 他踌躇地站在院门口，给我挤出了一个惨淡的笑容。我们相视无言地站了会儿。他的右腿无力的耷拉在地上，让我回想起在他腿上狠狠打的那一下。我转身回到屋里去，再出来时，他正趴在水缸边喝水。
+十一月，一个摇摇晃晃的身影又出现在了路的尽头。他比之前更瘦了，颧骨像衣架一样撑着，衣服破烂，像刚从坟墓里爬出来一般。 他踌躇地站在院门口，向我挤出了一个惨淡的笑容。我们相视无言地站了会儿。他的右腿无力的耷拉在地上，让我回想起在他腿上狠狠打的那一下。我转身回到屋里去，再出来时，他正趴在水缸边喝水。
 
-他又住下来了。白天他依旧躺在水缸边，在我过路时向我兜售癞蛤蟆；晚上他瑟瑟发抖地蜷缩在屋檐下。这里的冬夜寒风凛冽，裹挟着他的阵阵呻吟声，一刻不停的撞击着门和窗户。一个结霜的早晨他偷偷地溜了进来。我看到灰蒙之中一个黑影在桌子旁晃动，下床去，看到他正把自己抱成一团。我们像两具雕塑一样在晨光中僵持了一会儿，接着寒意袭来，我重新回到了床上。
+他又住下来了。白天他依旧躺在水缸边，在我过路时向我兜售癞蛤蟆；晚上他瑟瑟发抖地蜷缩在屋檐下。这里的冬夜寒风凛冽，裹挟着他的阵阵呻吟声，一刻不停的撞击着门和窗户。一个结霜的早晨他偷偷地溜了进来。我看到灰蒙之中一个黑影在桌子旁晃动，下床去，看到他正把自己抱成一团。我们像两具雕塑一样在晨光中对峙了一会儿，接着寒意袭来，我重新回到了床上。
 
-从那时起他就可以自由地进出屋子了。白天吃饭时他跟我们同桌，晚上就睡在了屋里。他殷勤地给我们夹菜，舔掉他碗里的最后一粒米，讪笑着等待帮忙收拾碗筷。他睡在屋子里稍微宽阔一点的地方。屋里虽然不再有风，但依然冷如冰窖，他不时想挨近床边，但总被我大声地斥责回去。
+他开始自由地进出屋子。白天吃饭时他跟我们同桌，晚上就睡在屋里。他殷勤地给我们夹菜，舔掉他碗里的最后一粒米，讪笑着等待帮忙收拾碗筷。他睡在屋子角落里一个宽阔的地方。夜晚屋里虽然不再有风，但依然冷如冰窖。他偷偷地挨近床边来，想拣掉在地上的被角盖在身上。我大声斥责他走开。他没有动，央求地望着我。我下床去把他推开，转身上床时听到一声脆响，右腿一阵剧烈的疼痛。我从床上滚落下来，看到他拿着板凳站在我背后。
 
-一个晚上我被妻子的叫声惊醒，看到他正拽着被子的一角。我下床来想扯开他，他就一只手攀着床沿往床上爬。妻子大声呼救。我又跳上床去踹他，他一边用手护着头，哼哼地叫着，一边往被子里钻。妻子叫得更大声了。我使劲踹他，他往床尾的方向挪动。最后大家都累了，我喘着粗气坐在床上，他蜷缩在床尾，一只手死死拽着被子，另一只手绕过床尾抓着下面的挡板。他似乎对这个结果很满意，不一会儿竟想起了他的呼噜声。我踹他，呼噜声骤然停止，然后又响起，我又踹一脚，又停止，然后又响起。妻子笑了，她也如法炮制了一遍。我们都笑了起来，这成了我们的游戏。
+我的腿断了。疼痛让我说不出话来。我看到他爬上去睡到了我的位置。妻子坐起来推他，但他无动于衷。他们在床上僵持着，屋里变得越来越冷了。寒冷，或者还有其他什么东西，让妻子的动作放慢，最后定格在那里。就在我以为她就要这样一直坐到天明的时候，她又缓缓地睡了下去。
 
-他就每晚在床尾睡下来了，一开始给我造成了很大的不便，我希望冬天早点过去。后来稍微习惯后，我感觉被窝比之前更暖和了。只是我没料到一次起夜回来后，他赫然睡在了我妻子旁边，占据了我原来床上的位置。我走过去推开他，他纹丝不动。我掀开被子，使劲把他拉下来。正在我准备上床时，突然感到背后生疼，接着脚上也被打了一下。我滚落下来，看到他拿着板凳站在我背后。
+这一天的早晨到来得无比的缓慢。我被他赶到了院子里。我直不起身来够不着水缸里的水。饥渴让伤口变得越来越疼。中午，我想进屋吃饭，他把我赶了出来，一直赶到了院子外面。我们在院门口拉扯了会儿，我被他推倒在地。尘土溅起来迷住了我的眼睛。我感到他把什么东西丢到了地上。我趴过去，眯着眼睛，迎着太阳，把手里的东西远远的举到视野的中央。
 
-我的腿断了。我躺在地上呻吟了一整晚。第二天早上被他赶到了院子里。我向妻子呼救，她无动于衷。他们吃饭时我爬进屋，想讨几口饭吃，他把我赶出来，重重地踹了我几脚。我爬出了院子，一直爬，爬到一条河沟里喝了几口水。我感到裤兜里有点异样，我伸手进去掏出了一样东西。我趴在河沟边，迎着太阳，把手远远地举到视野中央。我眯缝着眼睛端详，是那只癞蛤蟆。
+是那只癞蛤蟆。
 
-远处的夕阳快要坠落到路的尽头了。一个笑容降临到我的脸上。
+远处有一股炊烟升起。一个笑容降临到了我的脸上。
