--- a/_posts/2018-05-04-laihama.md
+++ b/_posts/2018-05-04-laihama.md
@@ -33,11 +33,11 @@ title: 推销一只癞蛤蟆
 
 他又住下来了。白天他依旧躺在水缸边，在我过路时向我兜售癞蛤蟆；晚上他瑟瑟发抖地蜷缩在屋檐下。这里的冬夜寒风凛冽，裹挟着他的阵阵呻吟声，一刻不停的撞击着门和窗户。一个结霜的早晨他偷偷地溜了进来。我看到灰蒙之中一个黑影在桌子旁晃动，下床去，看到他正把自己抱成一团。我们像两具雕塑一样在晨光中对峙了一会儿，接着寒意袭来，我重新回到了床上。
 
-他开始自由地进出屋子。白天吃饭时他跟我们同桌，晚上就睡在屋里。他殷勤地给我们夹菜，舔掉他碗里的最后一粒米，讪笑着等待帮忙收拾碗筷。他睡在屋子角落里一个宽阔的地方。夜晚屋里虽然不再有风，但依然冷如冰窖。他偷偷地挨近床边来，想拣掉在地上的被角盖在身上。我大声斥责他走开。他没有动，央求地望着我。我下床去把他推开，转身上床时听到一声脆响，右腿一阵剧烈的疼痛。我从床上滚落下来，看到他拿着板凳站在我背后。
+他开始自由地进出屋子。白天吃饭时他跟我们同桌，晚上就睡在屋里。他殷勤地给我们夹菜，舔掉他碗里的最后一粒米，讪笑着等待帮忙收拾碗筷。他睡在屋子角落里一个宽阔的地方。夜晚屋里虽然不再有风，但依然冷如冰窖。他偷偷地挨近床边来，想拣掉在地上的被角盖在身上。我大声斥责他走开。他没有动，央求地望着我。我下床去把他推开，转身上床时听到一声脆响，右腿传来一阵剧痛。我从床上滚落下来，看到他拿着板凳站在我背后。
 
 我的腿断了。疼痛让我说不出话来。我看到他爬上去睡到了我的位置。妻子坐起来推他，但他无动于衷。他们在床上僵持着，屋里变得越来越冷了。寒冷，或者还有其他什么东西，让妻子的动作放慢，最后定格在那里。就在我以为她就要这样一直坐到天明的时候，她又缓缓地睡了下去。
 
-这一天的早晨到来得无比的缓慢。我被他赶到了院子里。我直不起身来够不着水缸里的水。饥渴让伤口变得越来越疼。中午，我想进屋吃饭，他把我赶了出来，一直赶到了院子外面。我们在院门口拉扯了会儿，我被他推倒在地。尘土溅起来迷住了我的眼睛。我感到他把什么东西丢到了地上。我趴过去，眯着眼睛，迎着太阳，把手里的东西远远的举到视野的中央。
+第二天早晨到来得无比的缓慢。我被他赶到了院子里。我直不起身来够不着水缸里的水。饥渴让伤口变得越来越疼。中午，我想进屋吃饭，他把我赶了出来，一直赶到了院子外面。我们在院门口拉扯了会儿，我被他推倒在地。尘土溅起来迷住了我的眼睛。我感到他把什么东西丢到了地上。我趴过去，眯着眼睛，迎着太阳，把手里的东西远远的举到视野的中央。
 
 是那只癞蛤蟆。
 
