--- a/_posts/2018-05-04-laihama.md
+++ b/_posts/2018-05-04-laihama.md
@@ -25,7 +25,7 @@ title: 推销一只癞蛤蟆
 
 他一直待到了九月份。他捡了些干草和柴在屋檐的一角，不再躺院子里了。他每天从窗户外顺走一点我们吃剩的饭菜。他喝缸里的水，把头埋到缸子里去。水被他搅得昏黄，面上飘着油渍跟菜渣。我每天从远处的井里挑桶水回家，进屋时他就躺在他自制的窝里扬起下巴来跟我打招呼。不再见到那只癞蛤蟆了，好像大家都忘记了它的存在。
 
-那天在院子里我没见到他，却听到屋里传来妻子的几声尖叫。我跨进屋去，看到妻子正被他堵在墙角，地面散落着碗筷，两碗白生生的饭倒扣在地上。他一只手拽着妻子的衣服，情绪激动地挥舞着另一只手。我操起一个板凳砸过去。他叫出声来，板凳砸到他的腿上，把声音折成了两段。妻子哽咽着说，"他硬要闯进来..."。  我继续打他。他抱着头跑出屋子，跑到院门外。我跟在他后面，用脚踹他。他向来时的方向跑，越跑越快，我捡起所有能捡起的东西砸向他。他拐进远处的山坳里，不见了。
+那天在院子里我没见到他，却听到屋里传来妻子的几声尖叫。我跨进屋去，看到妻子正被他堵在墙角，地面散落着汤水、碗筷，两碗白生生的饭倒扣在地上。他一只手拽着妻子的衣服，情绪激动地挥舞着另一只手。我操起一个板凳砸过去。他叫出声来，板凳砸到他的腿上，把声音折成了两段。妻子哽咽着说，"他硬要闯进来..."。  我继续打他。他抱着头跑出屋子，跑到院门外。我跟在他后面，用脚踹他。他向来时的方向跑，越跑越快，我捡起所有能捡起的东西砸向他。他拐进远处的山坳里，不见了。
 
 在冬天来临之前我再也没见到他。
 
@@ -41,4 +41,4 @@ title: 推销一只癞蛤蟆
 
 是那只癞蛤蟆。
 
-远处有一股炊烟升起。一个笑容降临到了我的脸上。
+远处有一股炊烟缓缓升起来了。一个笑容降临到了我的脸上。
