--- a/_posts/2018-05-04-laihama.md
+++ b/_posts/2018-05-04-laihama.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-tag: draft
+tag: story
 title: 推销一只癞蛤蟆
 ---
 那个人从大路远处走过来，是这个炎热的天气里放眼望去唯一还在移动的东西。他看上去跟我一样瘦，迈着很小的步子，踉跄，像走几步就有人突然推他一下。最后被狠狠地推了一把，他慌忙跨出两大步，在院门口站定了。
