--- a/_posts/2019-01-23-奥康纳的罪与罚.md
+++ b/_posts/2019-01-23-奥康纳的罪与罚.md
@@ -4,6 +4,8 @@ title: 奥康纳的罪与罚 - 评<上升的必将汇合>
 tag: note
 ---
 
+## 一
+
 这是奥康纳的第二个也是最后一个短篇集子，比之上一个 -- 更为人知的<好人难寻> -- 写得更加锋利，小说技艺更加成熟，同时更为邪恶。“邪恶”这个词是对夹杂愤怒、不解和恐惧的阅读体验的概括，是我阅读奥康纳时头一个在脑海里冒出来的词汇。 她笔下的人物多半丑陋，有人格或身体上的缺陷，行止带着天生的罪孽。每一个故事总会在一个审判日结尾，作者化身手持熊熊烈剑的大天使，她称量笔下角色的罪孽，高呼给他们十倍的罪罚吧。
 
 奥康纳自己也坦诚小说里的故意夸大。“当你能够假设你的读者怀有与你一致的信仰，你就能放松一些，并使用较为平常的方式与之说话，如果事情相反，你就不得不用震惊来使你看见的东西明显起来——对于近乎耳聋的人，你要大声喊叫；对于视力不清的人，你要画出大而惊人的人物。” 这种夸大不仅在于角色的罪罚之中，还存在于写作的细节上:  她定格渲染笔下的日常景象，给普通的行为赋予某种不详的征兆，营造出一种正走向毁灭的不安全感 -- 这也是阅读本书时会感受到“邪恶”的原因之一。
@@ -16,7 +18,9 @@ tag: note
 
     每一篇出色的小说里都有这样的一个瞬间：你可以感受到，天惠就在眼前，它在等待被人接受或者遭到拒绝。
 
-按照这种理解，作者并不是为了惩罚而惩罚， 而是假借惩罚，给笔下人物以当头棒喝，继而使之达到“顿悟”。例如《上升的必将汇合》里憎恨妈妈的朱利安，在妈妈病发跌倒在人行道上时，情不自禁的高喊，“ 妈妈！亲爱的！甜心！等等我！”
+按照这种理解，作者并不是为了惩罚而惩罚， 而是假借惩罚，给笔下人物以当头棒喝，继而使之达到“顿悟”。例如《上升的必将汇合》里憎恨妈妈的朱利安，在妈妈病发跌倒在人行道上的那一刻，他情不自禁的高喊，“ 妈妈！亲爱的！甜心！等等我！”
+
+## 二
 
 初读奥康纳可能不会是一个“愉快“的经历。 不同于讽刺小说，读者的地位总是高于人物，因此当人物遭受惩罚时，这种地位上的差距成了一个释怀的通道；但在她的小说世界里，他们是一体的，她的笔触带领读者深入人物的内心，用人物的眼睛看嘴巴说耳朵听，他们犯同样微小的罪，却遭遇同样巨大不公平的罚。 你可能会想，这总会是某种希腊悲剧式的体验吧，然而并不！为了消解悲剧性，惩罚总是以意外的形式来临。(《格林力夫》里梅太太意外的死在了牛角之下，《瘸腿的先进去》儿子跳楼身亡，等等)
 
