--- a/_posts/2015-12-29-波蒂瓦尔.md
+++ b/_posts/2015-12-29-波蒂瓦尔.md
@@ -1,7 +1,8 @@
 ---
 layout: post
-title: 波蒂瓦尔(旅人日记)
+title: 波蒂瓦尔
 tag: story
+desc: 旅人日记
 ---
 波蒂瓦尔是一座不大的城，你只需花上一个下午，就可以走遍那些享有美名的地标，邮局、鲜花小道、教堂广场、白鸽喷泉等等。你可能会心生疑问，这么小的一个地方，是如何亘古不变地满足游客的好奇心的？那个在邮局旁兜售明信片的干瘦老头也许会回答你，因为每一个到过波蒂瓦尔的人，无论你两手空空，也无论你带走一件什么样的纪念品，印着白鸽喷泉的体恤、教堂广场的微缩模型，还是鲜花小道上的鹅卵石，波蒂瓦尔都有办法让你留下一件私人的东西。
 
