--- a/_posts/2015-12-29-马尔丁.md
+++ b/_posts/2015-12-29-马尔丁.md
@@ -1,7 +1,8 @@
 ---
 layout: post
-title: 马尔丁(旅人日记)
+title: 马尔丁
 tag: story
+desc: 旅人日记
 ---
 这座名字叫马尔丁的小城位于唯一通向她的路上，她是这条路的终点也是起点, 因此没有人会偶然经过马尔丁。这是座普通的城，是你可以在平原、河谷、山坳、海边、下雨的清晨、日落的黄昏都可能遇到的城，除了一点：在马尔丁每一个名字都归属于两个人，两个人过着各自的生活，永远不会在同一个场合出现。你可能在城东遇到一个叫威尔金的木匠，在西边却碰到同样叫威尔金的作家，可是城里的人拒绝承认有两个威尔金，“他只是同时是木匠和作家而已”。当你走进马尔丁，名字会和你最先认识的人绑定，而另一个人则仅会成为它的补充，一个游魂，一个没有归宿的形象。所以，你要谨慎地选择进入马尔丁的时机，但一些事情仍然不能避免：来马尔丁寻找智者的人最后遇见了屠夫，寻找婊子的人却碰到了圣女。因此，旅人们对马尔丁的评价并不统一，一半的人说她在堕落，一半的人说她在上升。
 
