--- a/_posts/2016-01-15-关于旅费问题的说明.md
+++ b/_posts/2016-01-15-关于旅费问题的说明.md
@@ -8,8 +8,26 @@ desc: 旅人日记
 
 当一个旅人，他要从一个城市迁移到另外一个城市，并要在这个地方维持一段足够长的生活时，他的经费从何而来？
 
-我们当然会尽量节省开支，省掉那些不必要，或者仅仅是看似必要的需求。比如，我们不必固执的每天吃三顿饭了，不再需要这些固定的仪式来提醒我们时间的流逝.当然一开始那些故意被遗忘掉的餐饭会让你饥饿，而饥饿会让你更想家，我们需要忍受这段时间的煎熬，说不上有多长或多短，直到饥饿成为你习以为常的一部分。本质上来说，饥饿只是想家的一种形式，你能忘记饥饿，但却永远也摆脱不了回家的念头；我们也不需要镜子了，它留不住一个流逝的形象。一个镜子能耗费多少钱呢？也许你会说，三个银币而已。但更重要的是，当我们不需要镜子后，我们也就连带的不需要了其他很多东西，像毛巾、香皂、丝巾、刮胡刀、圣诞节的卡片、那些总在不经意间吞噬掉你钱财的小玩意儿；我们不住30块以上的旅店；我们不享受超过40块的服务，不管它是来自一位年老的盲者还是青春的少女； 70块的靴子，够了，而且只得如此，我们有很长的路要走，一双结实耐磨的鞋是必需的；旅人要不断的移动，交通是我们首先要考虑的问题，而步行是我们最佳的选择，这不仅仅因为它是最廉价的，而是它同时也是最自由的：在从已知通往朦胧的道路上，步行的人随时可以驻足转身，也就是说，要直到我们踏上目的地的那一刻，可能才会成为确定，未来才会变成现在。只是考虑到步行将耗费的时间，它对鞋子、裤子与衣帽的磨损，它对神经的压迫，以及潜在的遇到猛兽、毒蛇与强盗的危险，这些都将随着路程的增加而变得越来越不可忽视。因此，当目的地足够遥远时，那么我们将不得不求助交通工具了，火车将是你最好的选择，你只需要花1公里1块以内的价钱，就可以到达地图上你能标明的任何位置，并且不会错过沿途的风景。相比轮船，火车有更密集的中间站点，是的，虽然做不到像步行那样的“随时”，但你仍然有中途改变行程的自由，可是即使这样，它还是遭到了那些最纯粹的旅人的抵制，他们在自由的问题上不做丝毫的妥协，坚持步行去那些最偏远的地方。在荒凉孤寂的路上，他们衣裳褴褛，目光决绝，疲惫而麻木地拖拽着双腿，而目的地又是那么的遥不可及，看上去似乎只得永远如此了。
+我们当然会尽量节省开支，省掉那些不必要，或者仅仅是看似必要的需求。比如，我们不必固执的每天吃三顿饭了，不再需要这些固定的仪式来提醒我们时间的流逝。l当然一开始那些故意被遗忘掉的餐饭会让你饥饿，而饥饿会让你更想家。我们需要忍受这段时间的煎熬，说不上有多长或多短，直到饥饿成为你习以为常的一部分。本质上来说，饥饿只是想家的一种形式，你能忘记饥饿，但却永远也摆脱不了回家的念头。我们也不需要镜子了，它留不住一个流逝的形象。一个镜子能耗费多少钱呢？也许你会说，三个银币而已。但更重要的是，当我们不需要镜子后，我们也就连带的不需要了其他很多东西：毛巾、香皂、丝巾、刮胡刀、圣诞节的卡片、那些总在不经意间吞噬掉你钱财的小玩意儿。我们不住30块以上的旅店。我们不享受超过40块的服务，不管它是来自一位年老的盲者还是青春的少女。70块的靴子，够了，而且只得如此，我们有很长的路要走，一双结实耐磨的鞋是必需的。
 
-我并不打算用上面所述的来搪塞你，因为事实如此：无论我们是如何的节省，那些必要的开销总是无法避免的。然而这也是作为一个旅人最窘迫的地方，我们不能做的事情是那么多，而被验证普遍能赚钱的方法根本没有，你几乎可以通过一个人能不能掏出面值100元的钞票，来辨别他是不是一个旅人。在众多严禁做的事情中，最影响我们收入的是：当你离开一个地方时，不能带走任何有重量的东西。因为在整个的旅行生涯中，重量是我们唯一要格外小心的因素。“你要足够轻才能走得远”，在刚成为一名旅人的时候，一个前辈曾这样教导我。他甚至让我试着走上一片细软的白沙，要求我不能留下一丝足迹。所以那些通常被认为适合常年辗转多地的人的工作，并不适合我们。我们不能做带信人，口信也不行，那些委托人肯花上三四十块钱让你带出的口信，都带着急迫与焦虑的重量，至于把此处廉价的商品带到别处高价卖出的做法，更是想也别想了。我们只能考虑其他的选择：我曾帮助一位老妇人在她的大宅子里寻找记忆碎片－－她的家是如此的空旷与沉寂，我必须像只猫一样小心翼翼地穿梭在各个布满灰尘不上锁的房间里－－这些碎片包括像残破发黄的日记本、吊坠已不翼而飞的项链、玻璃球、廉价的丝巾、缺了一条腿的椅子、未寄出去的信，等等可以被用来拼凑出一张照片的小物什。我成功说服老妇人照片里的年轻女子就是她自己，以此换来了相当长一段时间的住宿与食物；我曾向刚刚耕作完的农民们讲述遥远天国的故事，以换取10到15块钱的报酬。躺在刚刚被翻起的新鲜泥土上，他们沉浸在美满的憧憬中，并不知道我讲述的是他们自己的故事；我向山里的孩子描述海的形状，“泛着泡沫的巨型小便池”，如果他们肯付些钱，我会继续描述珊瑚礁，贝壳，和沙滩，为了维持旅费，我必须精打细算的售卖想象；我为盲人唱歌；我守在路的尽头为人们预报春天的来临；我誊抄遗嘱；我教年轻的妻子们说谎.......这个单子我还可以一直列下去，列得很长很长，但为了节省您的时间，我还是就此打住吧。为了说明一个旅人与他必须维持的旅费之间的关系，我可以用下面这个故事来代替这张无限长的清单：
+旅人要不断的移动，交通是我们首先要考虑的问题，而步行是我们最佳的选择。这不仅仅因为它是最廉价的，而是它同时也是最自由的：在从已知通往朦胧的道路上，步行的人随时可以驻足转身，也就是说，要直到我们踏上目的地的那一刻，可能才会成为确定，未来才会变成现在。只是考虑到步行将耗费的时间，它对鞋子、裤子与衣帽的磨损，它对神经的压迫，以及潜在的遇到猛兽、毒蛇与强盗的危险，这些都将随着路程的增加而变得越来越不可忽视。因此，当目的地足够遥远时，那么我们将不得不求助交通工具了。火车将是你最好的选择，你只需要花1公里1块以内的价钱，就可以到达地图上你能标明的任何位置，并且不会错过沿途的风景。相比轮船，火车有更密集的中间站点，是的，虽然做不到像步行那样的“随时”，但你仍然有中途改变行程的自由，可是即使这样，它还是遭到了那些最纯粹的旅人的抵制，他们在自由的问题上不做丝毫的妥协，坚持步行去那些最偏远的地方。在荒凉孤寂的路上，他们衣裳褴褛，目光决绝，疲惫而麻木地拖拽着双腿，而目的地又是那么的遥不可及，看上去似乎只得永远如此了。
+
+我并不打算用上面所述的来搪塞你，因为事实如此：无论我们是如何的节省，那些必要的开销总是无法避免的。然而这也是作为一个旅人最窘迫的地方，我们不能做的事情是那么多，而被验证普遍能赚钱的方法根本没有。你几乎可以通过一个人能不能掏出面值100元的钞票，来辨别他是不是一个旅人。在众多严禁做的事情中，最影响我们收入的是：当你离开一个地方时，不能带走任何有重量的东西。因为在整个的旅行生涯中，重量是我们唯一要格外小心的因素。“你要足够轻才能走得远”，在刚成为一名旅人的时候，一个前辈曾这样教导我。他甚至让我试着走上一片细软的白沙，要求我不能留下一丝足迹。所以那些通常被认为适合常年辗转多地的人的工作，并不适合我们。我们不能做带信人，口信也不行，那些委托人肯花上三四十块钱让你带出的口信，都带着急迫与焦虑的重量，至于把此处廉价的商品带到别处高价卖出的做法，更是想也别想了。我们只能考虑其他的选择：
+
+-- 我曾帮助一位老妇人在她的大宅子里寻找记忆碎片－－她的家是如此的空旷与沉寂，我必须像只猫一样小心翼翼地穿梭在各个布满灰尘不上锁的房间里－－这些碎片包括像残破发黄的日记本、吊坠已不翼而飞的项链、玻璃球、廉价的丝巾、缺了一条腿的椅子、未寄出去的信，等等可以被用来拼凑出一张照片的小物什。我成功说服老妇人照片里的年轻女子就是她自己，以此换来了相当长一段时间的住宿与食物；
+
+-- 我曾向刚刚耕作完的农民们讲述遥远天国的故事，以换取10到15块钱的报酬。躺在刚刚被翻起的新鲜泥土上，他们沉浸在美满的憧憬中，并不知道我讲述的是他们自己的故事；
+
+-- 我向山里的孩子描述海的形状，“泛着泡沫的巨型小便池”，如果他们肯付些钱，我会继续描述珊瑚礁，贝壳，和沙滩，为了维持旅费，我必须精打细算的售卖想象；
+
+-- 我为盲人唱歌；
+
+-- 我守在路的尽头为人们预报春天的来临；
+
+-- 我誊抄遗嘱；
+
+-- 我教年轻的妻子们说谎;
+
+这个单子我还可以一直列下去，列得很长很长，但为了节省您的时间，我还是就此打住吧。为了说明一个旅人与他必须维持的旅费之间的关系，我可以用下面这个故事来代替这张无限长的清单：
 
 一位富豪曾慷慨的要为我提供舒适的住宿。我跟在他的后面，进入了那个因为盛产黄金而被人称为“永恒的秋天”的城市。在穿过一个巨大嘈杂的集市时，这位中年人指着周围被明码标价的商品，“我可以买下这里任何的东西”，他说，“年轻的旅人，请你告诉我我还缺什么？”  我环顾四周，我看到了新鲜的水果，闪亮的银质餐具，成捆的撂着的土耳其挂毯，我看到了琉璃与陶瓷，看到了水一样流淌着的丝绸，和丝绸上遥远的东方图案，我看到了香料，药膏，宝石，看到了一排排列出了仪仗队阵势的香水瓶子，我看到了鹦鹉，蜥蜴，两头蛇，有着忧郁眼睛的非洲象，看到了皮肤被肌肉撑得紧绷而显得有些透明的蒙古马，看到了坐在门廊前的美丽少女，和购买她们一晚或一生的价格...... 这里有我穷尽一生也看不完的东西。我沉吟半晌，然后回答他，“ 你缺少的东西并不在这集市里面，也就是说，并不在已知之中。集市内的空间在向外无限扩张，因而你缺少的是并不存在的东西”。然后是一段尴尬的沉默，他不再说什么了，加快了脚步继续往前走，而我踉跄的跟在后面，越跟越远。集市的嘈杂掩盖了我唤他的声音，他没有回头，而人潮把我推得东倒西歪，渐渐的把我彻底淹没，直到傍晚他们从集市里散去，而一场大雨从天而降。于是我这条可怜虫，只好瑟瑟发抖地躲在低矮的屋檐下，饿着肚子，数着雨滴，想着那化为泡影的温暖大床，等待愁容重新爬回我的脸上。
