--- a/_posts/2018-09-16-做梦的人.md
+++ b/_posts/2018-09-16-做梦的人.md
@@ -6,17 +6,17 @@ title: 做梦的人
 
 医生告诉G，至少要减下二十斤来。说话时，右手食指的第二个指节一直敲打着桌上的诊断书，表情轻蔑而严肃。于G而言，如同被宣判了死刑。
 
-虽然做好了心理准备，但还是被上面的数字吓了一跳。一年前，同样被告知有严重肥胖症时，他就下定决心要摆脱这个数字了。于是他扔掉了秤，极少在镜子前驻足，绝口不谈运动跟恋爱的事，当然，再也不来复诊。但数字并没有消失, 而是在暗地里疯涨。这次把他带回来的，是越来越多的疼痛和越来越长的失眠。
+虽然做好了心理准备，但仍被上面的数字吓了一跳。一年前，同样被告知有严重肥胖症时，他就下定决心要摆脱这个数字了。于是他扔掉了秤，极少在镜子前驻足，绝口不谈运动跟恋爱的事，当然，再也不来复诊。但数字并没有消失, 而是在暗地里疯涨。这次把他带回来的，是越来越多的疼痛和越来越长的失眠。
 
 “运动！”，医生向他强调，有点咬牙切齿的味道了。但G只是一味低头回避他的目光。在G的字典里，运动是对意志力无休止的磨损而必将以失败告终的尝试，如同以手掬水。
 
 他跟医生讨了一个月剂量的安眠药，是这次会诊的唯一收获。
 
-这天晚上, 他终于睡到了长久以来的第一个好觉，甚至还做了梦。在梦中他站在一条暗红色的跑道上，跑道远远地向前伸展，最后消失在在目力所不及的一片灰霭之中。他的旁边，两百米开外，一条林木线与跑道并排向前, 星星点点的夕照穿过林间的缝隙。那种熟悉的沉重感突然间消失了，他感觉双腿蕴满了风。
+这天晚上, 他终于睡到了长久以来的第一个好觉，甚至还做了梦。在梦中他站在一条暗红色的跑道上，跑道远远地向前伸展，最后消失在在目力所不及的一片灰霭之中。他的旁边，两百米开外，一条林木线与跑道并排向前, 星星点点的夕照穿过林间的缝隙落在他的身上。那种熟悉的沉重感消失了，他感觉双腿蕴满了风。
 
 早上醒来后，G筋疲力尽，小腿肚上的酸疼却让人舒服。通过手机屏幕的反光，他看到自己脸上沁出了大颗的汗珠，双颊呈现出那种剧烈运动后特有的酡红色。他感到前所未有的轻松，因而肯定梦里的奔跑产生了实际的效果。
 
-在接下来的一个月里，每个夜晚他都梦回这条跑道。跑步时，G能感受到肌肉的收缩，那因疲惫而引起的胃部抽搐让他觉得无比真实。生活里固然有诸多身不由己，但在梦里，跑步是唯一要做的事情。况且夜晚漫长，跑道又似乎无穷无尽。当他最终因体力不支而萎顿于地时，看到紫红色的天空低悬于触手可及的位置，围绕他越来越快地旋转，很快变沉沉睡去 -- 然后, 就从梦的这一头醒来.
+在接下来的一个月里，每个夜晚他都回这条跑道。梦里跑步时，G能感受到肌肉的收缩，那因疲惫而引起的胃部抽搐让他觉得无比真实。生活里固然有诸多身不由己，但在梦里，跑步是唯一要做的事情。况且夜晚漫长，跑道又似乎无穷无尽。当他最终因体力不支而萎顿于地时，看到紫红色的天空低悬于触手可及的位置，围绕他越来越快地旋转，很快变沉沉睡去 -- 然后, 就从梦的这一头醒来.
 
 他敏感地察觉到了身体的一些细微变化。一种从未有过的畅快感如电流一样流遍全身，裤腰也明显明显松了一圈。
 
@@ -39,6 +39,4 @@ title: 做梦的人
 他猛然跌倒在地。
 
 同以往的每个早上不一样的是，这一次G再也没有醒来。
-
-
 
