--- a/_posts/2019-10-24-飞行员.md
+++ b/_posts/2019-10-24-飞行员.md
@@ -11,11 +11,9 @@ tag: story
     
     沿着字里行间的跑道
     
-    慢慢滑行。
+    滑行。
     
-    一对轮胎
-    
-    本还缺一个句号
+    一对轮胎, 本还缺一个句号
     
     但现在已不成问题。
     
