--- a/_posts/2020-04-26-那个时候.md
+++ b/_posts/2020-04-26-那个时候.md
@@ -16,9 +16,7 @@ tag: story
     
     我独自坐着
     
-    用时间
-    
-    为时钟画着刻度
+    听时间画着时钟的刻度
     
      
     
@@ -48,7 +46,7 @@ tag: story
     
      
     
-    可是无人领会
+    -- 可是无人领会
     
     这些奇迹
     
