--- a/_posts/2020-01-21-世界上最后的一条鱼.md
+++ b/_posts/2020-01-21-世界上最后的一条鱼.md
@@ -27,7 +27,7 @@ tag: story
 
 我搞砸了，他说，我彻底搞砸了。 他眼里含着泪水，像一个做错事情的小孩那样垂着头。我只是一个饲养员，永远也成为不了讲解员。说着那双肥厚的嘴唇就要往下撇，立马就要哭出来了。我忙往前一步，想给他一点安慰以制止这更令人尴尬的局面发生，可是又马上意识到我只是一个陌生人，对他的悲伤我并不负责而且也无能为力。但这一举动已被他解读为同情的示意，于是他带着哭腔大声地说出，“可是这能怪我吗”，眼泪终于夺眶而出。现在这里只有我一个人了，我能怎么办呢？讲解员走了，其他人也走了。以前这里的人多到数不清，来看鱼的人走了一波又一波，打烊了也不肯走。而且那个时候这里的观众友好又配合，把我们的工作当作真正伟大的表演讲解员他每次一做这个动作，人们就会大笑。(说到这里他警惕地看了我一眼，生怕我听出话里责怪的意味) 可是以后来的人越来越少，人们对鱼失去了兴趣。世界上最后的除了鱼还有很多其他东西。那个时候....他抬起有两道泪痕的脸看着蓝色水箱里的它，是我们最好的时光。作为世界上最后的一条鱼，它也感到骄傲的吧。
 
-*人们从很多地方赶来，风中洋溢着节日的气息。有的人一下飞机就急匆匆地打听博物馆的位置，可是还不等说出口，旁人已心领神会的告诉了他。那个时候还有什么比这世界上最后的一条鱼更值得关注的呢？白天人们把这里围得水泄不通，等候入场的队伍长得看不到头。有的人在人群中哭了起来，因为已经在这里等了三天三夜了，可是入场的时间仍然遥不可及。也就在这个时候，他才会想起咒骂几声那些造成这个局面的人们。为什么只剩下最后一条鱼呢？为什么不留下两条，三条，甚至二十条呢？可是如果是那样的话，他自己也没把握是否还会有足够的动力跑到这里来。但是即使那些最终进场的人，情况也好不到哪里去。前方传来观众的阵阵笑声，然而自己看到的却只有前排人的后脑勺和汗津津的脖颈。饥饿和晕眩被这阵阵笑声搅动，竟感到了一些晕眩。可是还能怎么办呢？后面黑压压的人群比前方的更多，况且已经千辛万苦走到这里，断没有中途放弃的可能啊，只得继续等待。等到好不容易走到人群的最前排，终于看见了那孤零零地在鱼缸里游动的生物时，却发现它旁边的表演却要更吸引人得多。*
+*人们从很多地方赶来，风中洋溢着节日的气息。有的人一下飞机就急匆匆地打听博物馆的位置，可是还不等说出口，旁人已心领神会的告诉了他。那个时候还有什么比这世界上最后的一条鱼更值得关注的呢？白天人们把这里围得水泄不通，等候入场的队伍长得看不到头。有的人在人群中哭了起来，因为已经在这里等了三天三夜了，可是入场的时间仍然遥不可及。也就在这个时候，他才会想起咒骂几声那些造成这个局面的人们。为什么只剩下最后一条鱼呢？为什么不留下两条，三条，甚至二十条呢？可是如果是那样的话，他自己也没把握是否还会有足够的动力跑到这里来。但是即使那些最终进场的人，情况也好不到哪里去。前方传来观众的阵阵笑声，然而自己看到的却只有前排人的后脑勺和汗津津的脖颈。饥饿被这阵阵笑声搅动，竟感到了一些晕眩。可是还能怎么办呢？后面黑压压的人群比前方的更多，况且已经千辛万苦走到这里，断没有中途放弃的可能啊，只得继续等待。等到好不容易走到人群的最前排，终于看见了那孤零零地在鱼缸里游动的生物时，却发现它旁边的表演要更吸引人得多。*
 
 他说，你要走了吗？
 
